# python_base

./: .flake8  .gitignore  README.md  calculator.py  main.py  pyproject.toml  requirements.txt
