[project]
name = "base_python"
version = "0.1.0"
description = "Python base learning project"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "black==25.11.0",
    "click==8.3.1",
    "flake8==7.3.0",
    "isort==7.0.0",
    "mccabe==0.7.0",
    "mypy_extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pytokens==0.3.0",
]

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
